fix: increase nav active indicator visibility using accent color

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -107,8 +107,8 @@
       bottom: 0px;
       left: 12px;
       right: 12px;
-      height: 1px;
-      background: var(--theme-on-surface);
+      height: 2px;
+      background: var(--theme-accent);
     }
   }
 }
